--- a/package.json
+++ b/package.json
@@ -1,21 +1,69 @@
 {
-  "name": "allims-lib-sandbox",
-  "private": true,
-  "version": "0.0.0",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0"
-  },
-  "devDependencies": {
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
-    "@vitejs/plugin-react": "^1.3.0",
-    "typescript": "^4.6.3",
-    "vite": "^2.9.9"
-  }
+    "name": "@developerAllims/allims-lib",
+    "private": true,
+    "version": "1.0.0",
+    "author": "Allims",
+    "description": "Lib allims",
+    "license": "MIT",
+    "main": "dist/cjs/index.js",
+    "module": "dist/esm/index.js",
+    "files": [
+        "dist"
+    ],
+    "types": "dist/index.d.ts",
+    "repository": "https://github.com/developerAllims/allims-lib.git",
+    "publishConfig": {
+        "registry": "https://npm.pkg.github.com/"
+    },
+    "scripts": {
+        "dev": "vite",
+        "build": "tsc && vite build",
+        "preview": "vite preview",
+        "rollup": "rm -rf dist && rollup -c",
+        "clean": "rm -rf node_modules && rm *.lock && rm -rf dist"
+    },
+    "dependencies": {
+        "@geoffcox/react-splitter": "^2.1.1",
+        "date-fns": "^2.28.0",
+        "react-confirm": "^0.2.3",
+        "react-toastify": "^9.0.1",
+        "uuid": "^8.3.2"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.16.0",
+        "@babel/preset-env": "^7.16.4",
+        "@babel/preset-react": "^7.16.0",
+        "@babel/preset-typescript": "^7.16.0",
+        "@rollup/plugin-commonjs": "^21.0.1",
+        "@rollup/plugin-node-resolve": "^13.0.6",
+        "@rollup/plugin-typescript": "^8.3.0",
+        "@types/axios": "^0.14.0",
+        "@types/date-fns": "^2.6.0",
+        "@types/react": "^18.0.0",
+        "@types/react-confirm": "^0.1.4",
+        "@types/react-dom": "^18.0.0",
+        "@types/react-toastify": "^4.1.0",
+        "@types/uuid": "^8.3.4",
+        "@vitejs/plugin-react": "^1.3.0",
+        "axios": "^0.27.2",
+        "babel-loader": "^8.2.3",
+        "react": "^18.0.0",
+        "react-dom": "^18.0.0",
+        "react-hook-form": "^7.30.0",
+        "rollup": "^2.60.2",
+        "rollup-plugin-dts": "^4.0.1",
+        "rollup-plugin-peer-deps-external": "^2.2.4",
+        "rollup-plugin-postcss": "^4.0.2",
+        "rollup-plugin-terser": "^7.0.2",
+        "sass": "^1.51.0",
+        "tslib": "^2.4.0",
+        "typescript": "^4.6.3",
+        "vite": "^2.9.5"
+    },
+    "peerDependencies": {
+        "axios": "^0.27.x",
+        "react": "^18.0.x",
+        "react-dom": "^18.0.x",
+        "react-hook-form": "^7.30.x"
+    }
 }
